--- a/app/src/main/res/layout/fragment_create_rate_type.xml
+++ b/app/src/main/res/layout/fragment_create_rate_type.xml
@@ -218,7 +218,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/companyNameLayout"
-                        android:layout_width="3500dp"
+                        android:layout_width="350dp"
                         android:layout_height="@dimen/textInputLayoutHeight"
                         android:visibility="gone"
                         android:background="@color/secondaryBackground"
@@ -227,6 +227,7 @@
                         style="@style/TextInputLayoutStyle"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintEnd_toStartOf="@id/roomTypeLayout"
                         app:layout_constraintTop_toTopOf="@id/rateTypeLayout"
                         app:layout_constraintBottom_toBottomOf="@id/rateTypeLayout"
@@ -244,7 +245,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/roomTypeLayout"
-                        android:layout_width="0dp"
+                        android:layout_width="350dp"
                         android:layout_height="@dimen/textInputLayoutHeight"
                         android:visibility="gone"
                         android:background="@color/secondaryBackground"
@@ -275,10 +276,11 @@
                         android:visibility="gone"
                         android:background="@color/secondaryBackground"
                         android:layout_marginStart="10dp"
-                        android:hint="Room Type"
+                        android:hint="Master Rate Plan"
                         style="@style/TextInputLayoutStyle"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintEnd_toEndOf="@id/continueBtn"
                         app:layout_constraintTop_toTopOf="@id/companyNameLayout"
                         app:layout_constraintBottom_toBottomOf="@id/companyNameLayout"
@@ -294,13 +296,20 @@
                             android:textColor="@color/secondary" />
                     </com.google.android.material.textfield.TextInputLayout>
 
-        <FrameLayout
-            android:id="@+id/ratePlanFragContainer"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/rateTypeLayout"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <FrameLayout
+                android:id="@+id/ratePlanFragContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"/>
+
+        </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
