--- a/app/src/main/res/layout/activity_first_onboarding_screen_mobile.xml
+++ b/app/src/main/res/layout/activity_first_onboarding_screen_mobile.xml
@@ -30,6 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="240dp"
             android:orientation="horizontal"
+            android:layout_marginHorizontal="12dp"
             android:weightSum="2"
             android:gravity="center_horizontal"
             app:layout_constraintVertical_bias="0.05"
@@ -79,7 +80,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginStart="12dp"
                 app:cardBackgroundColor="@color/white"
                 app:strokeColor="@color/grey10"
                 app:strokeWidth="2dp"
