--- a/app/src/main/res/layout/fragment_rates_and_inventory.xml
+++ b/app/src/main/res/layout/fragment_rates_and_inventory.xml
@@ -200,11 +200,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@id/source_layout"
         android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/inputedit_text_background"
+        android:layout_marginBottom="20dp"
         >
 
         <LinearLayout
