--- a/app/src/main/res/layout/activity_final_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_final_onboarding_screen.xml
@@ -129,6 +129,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="60dp"
+                        android:visibility="gone"
                         android:orientation="vertical">
 
                         <TextView
@@ -156,7 +157,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="60dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:orientation="vertical">
 
                         <TextView
