--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -110,26 +110,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/textInputLayoutHeight"
-                    android:hint="Room Type Name"
-                    android:layout_marginTop="10dp"
-                    style="@style/TextInputLayoutStyle"
-                    app:endIconMode="clear_text"
-                    app:endIconTint="@color/black">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fontFamily="@font/roboto"
-                        android:inputType="text"
-                        android:textSize="@dimen/H5"
-                        android:textColorHint="@drawable/hint_selector"
-                        android:textColor="@color/secondary" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -140,9 +120,30 @@
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="0dp"
                         android:layout_height="@dimen/textInputLayoutHeight"
+                        android:hint="Room Type Name"
+                        android:layout_weight="1"
+                        style="@style/TextInputLayoutStyle"
+                        app:endIconMode="clear_text"
+                        app:endIconTint="@color/black">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto"
+                            android:inputType="text"
+                            android:textSize="@dimen/H5"
+                            android:textColorHint="@drawable/hint_selector"
+                            android:textColor="@color/secondary" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/textInputLayoutHeight"
                         android:hint="Short Code"
                         android:layout_weight="1"
                         style="@style/TextInputLayoutStyle"
+                        android:layout_marginStart="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black">
 
@@ -157,19 +158,98 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/roomsInPL"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="5dp"
+                        app:cardCornerRadius="10dp"
+                        app:strokeWidth="0.5dp"
+                        android:layout_weight="1"
+                        app:strokeColor="@color/lightBlack"
+                        app:cardBackgroundColor="@color/white">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="No of Beds"
+                                android:textSize="14sp"
+                                android:textColor="@color/lightBlack"
+                                android:fontFamily="@font/roboto"
+                                android:layout_marginStart="16dp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"/>
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginEnd="10dp"
+                                android:gravity="center_vertical"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintTop_toTopOf="parent">
+
+                                <ImageView
+                                    android:id="@+id/removeBeds"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/svg_remove"/>
+
+                                <TextView
+                                    android:id="@+id/bedCount"
+                                    android:layout_width="45dp"
+                                    style="@style/TextAppearance.AppCompat.Body1"
+                                    android:background="@null"
+                                    android:layout_height="wrap_content"
+                                    android:text="1"
+                                    android:maxLength="4"
+                                    android:inputType="number"
+                                    android:textAlignment="center"
+                                    android:textSize="@dimen/H5"
+                                    android:textColor="@color/black"
+                                    android:fontFamily="@font/roboto_bold"/>
+
+                                <ImageView
+                                    android:id="@+id/addBeds"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/svg_add"/>
+
+                            </LinearLayout>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    </com.google.android.material.card.MaterialCardView>
+
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/ClickableTextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="@dimen/textInputLayoutHeight"
                         android:layout_marginStart="10dp"
                         android:layout_weight="1"
-                        android:hint="Bed Type">
+                        android:hint="Bed 1 Type">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
                             android:inputType="text"
+                            android:hint="King Size"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector"
                             android:textSize="@dimen/H5" />
@@ -177,6 +257,16 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/bedTypeRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:spanCount="2"
+                    tools:itemCount="4"
+                    android:layout_marginStart="-10dp"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    tools:listitem="@layout/item_text_input_layout"/>
 
                 <TextView
                     android:layout_width="wrap_content"
